get started page

--- a/themes/fortify-hugo/layouts/404.en.html
+++ b/themes/fortify-hugo/layouts/404.en.html
@@ -3,13 +3,11 @@
     <div class="container" data-aos="fade-up-sm">
       <div class="row justify-center">
         <div class="sm:col-10 md:col-8 lg:col-7 text-center">
-          {{ partial "image" (dict "Src" "/images/404.svg" "Alt" "Error Image" "Class" "mx-auto mb-16 block w-[480px]"  "Resize" false ) }}
+          {{ partial "image" (dict "Src" "/images/404.png" "Alt" "Error Image" "Class" "mx-auto mb-16 block w-[480px]"  "Resize" false ) }}
           <h1 class="h2 md:h1 mb-4">Oops! Page Not Found</h1>
           <div class="content">
             <p>
-              Your Trusted Partner in Data Protection with Cutting-Edge
-              Solutions for <br />
-              Comprehensive Data Security.
+             We've launched a new background job to help you find your way back home.
             </p>
           </div>
           <a href="/" class="btn btn-dark mt-8">
