--- a/themes/fortify-hugo/assets/css/base.css
+++ b/themes/fortify-hugo/assets/css/base.css
@@ -114,3 +114,9 @@ blockquote > p {
 .contact-container .btn {
   background-color:rgb(116, 76, 191) !important;
 }
+.content {
+    :where(blockquote p:first-of-type):not(:where([class~="not-prose"],[class~="not-prose"] *))::before {
+        content: none !important;
+    }
+  }
+
