--- a/themes/fortify-hugo/layouts/pro/list.html
+++ b/themes/fortify-hugo/layouts/pro/list.html
@@ -386,10 +386,9 @@
 
         fetch(zapierWebhookUrl, {
             method: 'POST',
-            body: JSON.stringify(formData),
-            headers: {
-                'Content-Type': 'application/json'
-            }
+            headers: { 'Content-Type': 'application/json' },
+            mode: 'no-cors', 
+            body: JSON.stringify(trialData)
         })
         .then(response => {
             // Even if Zapier returns an error, we assume form was captured
