--- a/themes/fortify-hugo/layouts/index.html
+++ b/themes/fortify-hugo/layouts/index.html
@@ -105,21 +105,21 @@
               <div
                 class="flex flex-wrap justify-center gap-4 px-4 lg:flex-nowrap lg:justify-between lg:px-0">
                 <div
-                  class="lg:mt-8 [&amp;.aos-animate]:lg:rotate-[-9.4deg]!"
+                  class="lg:mt-8 rotate-left-lg-fix"
                   data-aos="fade-in"
                   data-aos-duration="400"
                   data-aos-delay="200">
                   {{ partial "image" (dict "Src" .left "Alt" "Banner left" "Class" `min-[350px]:h-[80px]! lg:h-[72px]! shadow-sm rounded-md md:rounded-xl w-auto` "Resize" false) }}
                 </div>
                 <div
-                  class="[&amp;.aos-animate]:lg:rotate-[2.57deg]!"
+                  class="rotate-middle-lg-fix"
                   data-aos="fade-in"
                   data-aos-duration="400"
                   data-aos-delay="350">
                   {{ partial "image" (dict "Src" .middle "Alt" "Banner middle" "Class" `shadow-sm min-[350px]:h-[80px]! lg:h-[98px]! rounded-md md:rounded-xl w-auto` "Resize" false) }}
                 </div>
                 <div
-                  class="[&amp;.aos-animate]:lg:rotate-[-8.52deg]!"
+                  class="rotate-right-lg-fix"
                   data-aos="fade-in"
                   data-aos-duration="400"
                   data-aos-delay="500">
