--- a/themes/fortify-hugo/layouts/partials/components/pricing-plan.html
+++ b/themes/fortify-hugo/layouts/partials/components/pricing-plan.html
@@ -34,9 +34,7 @@
           <div class="flex flex-col gap-2 sm:flex-row sm:items-center">
             <strong class="h2 group-[.has-dark-bg]:text-light"
               >{{ .currency | markdownify }}<span
-                class="data-count"
-                data-count-yearly="{{ .yearly_price | markdownify }}"
-                data-count-monthly="{{ .monthly_price | markdownify }}"
+                class=""
                 >{{ .monthly_price | markdownify }}</span
               ></strong
             ><span
@@ -159,10 +157,11 @@
       </div>
     {{ end }}
   </div>
-
+   <br/>
   <div class="row justify-center mt-0 md:mt-8" data-aos="fade-up-sm">
     <div class="col-12 md:col-10 lg:col-8">
       <div class="rounded-xl bg-light px-8 py-10 text-center md:rounded-3xl md:px-11">
+        <br/>
         <h3 class="h4 mb-4">Looking for Enterprise?</h3>
         <p class="text-lg mb-6">
           Do you need to run JobRunr on unlimited clusters, projects, or microservices? Our Enterprise plan offers unlimited use, premium support, and flexible  support for custom procurement processes.
