first pages can link to each other

--- a/themes/fortify-hugo/layouts/get-jobrunr-pro-enterprise/list.html
+++ b/themes/fortify-hugo/layouts/get-jobrunr-pro-enterprise/list.html
@@ -39,18 +39,13 @@
                 name="company-name" class="form-input" placeholder="Your Company Name" required="" type="text" />
             </div>
             <div class="col-12">
-              <label for="subject" class="form-label">
-                {{ T "subject" }} <span class="text-red-500">*</span></label><input id="subject" name="subject"
-                class="form-input" placeholder="Your Company Name" required="" type="text" />
-            </div>
-            <div class="col-12">
               <label for="message" class="form-label">
-                {{ T "write_message" }} <span class="text-red-500">*</span></label><textarea id="message" name="message"
-                class="form-input" placeholder="Write Your Message Here" required="" rows="3"></textarea>
+                Is there something we should know?  <span class="text-red-500">*</span></label><textarea id="message" name="message"
+                class="form-input" placeholder="Write Your Optional Message Here" rows="3"></textarea>
             </div>
             <div class="col-12">
               <button type="submit" class="btn btn-regular">
-                {{ T "send_message" }}
+                Request your quote
               </button>
             </div>
           </form>
