--- a/themes/fortify-hugo/layouts/get-jobrunr-pro-enterprise/list.html
+++ b/themes/fortify-hugo/layouts/get-jobrunr-pro-enterprise/list.html
@@ -1,9 +1,9 @@
 {{ define "main" }}
 {{ with .Params.hero }}
-<section class="section">
+<section class="section pt-0">
   <div class="container contact-container">
     <div class="row">
-      <div class="lg:col-7 lg:pe-20 lg:pt-10" data-aos="fade-left-sm">
+      <div class="lg:col-7 lg:pe-20" data-aos="fade-left-sm">
         <p class="mb-2 font-medium text-tertiary">
           {{ .subtitle | markdownify }}
         </p>
