--- a/themes/fortify-hugo/layouts/404.en.html
+++ b/themes/fortify-hugo/layouts/404.en.html
@@ -1,9 +1,9 @@
 {{ define "main" }}
-  <section class="section text-center">
+  <section class="section text-center pt-0">
     <div class="container" data-aos="fade-up-sm">
       <div class="row justify-center">
-        <div class="sm:col-10 md:col-8 lg:col-7 text-center">
-          {{ partial "image" (dict "Src" "/images/404.png" "Alt" "Error Image" "Class" "mx-auto mb-16 block w-[480px]"  "Resize" false ) }}
+        <div class="sm:col-10 md:col-8 lg:col-7 text-center -m-5">
+          {{ partial "image" (dict "Src" "/images/404.png" "Alt" "Error Image" "Class" "mx-auto mb-6 block w-[480px]"  "Resize" false ) }}
           <h1 class="h2 md:h1 mb-4">Oops! Page Not Found</h1>
           <div class="content">
             <p>
