Fix syntax highlighting

--- a/themes/fortify-hugo/assets/css/main.css
+++ b/themes/fortify-hugo/assets/css/main.css
@@ -30,6 +30,7 @@
 
  
  @import "module-overrides.css";
- @import "custom.css"; 
+ @import "chroma-github.css";
+ @import "syntax-highlighter.css"; 
 
 
