--- a/themes/fortify-hugo/assets/css/main.css
+++ b/themes/fortify-hugo/assets/css/main.css
@@ -33,7 +33,7 @@
  @import "custom.css"; 
  @import "chroma-github.css";
  @import "syntax-highlighter.css"; 
- @import "documentation.css"
-
+ @import "documentation.css";
+ @import "extension.css";
 
 
