--- a/themes/fortify-hugo/layouts/documentation/single.html
+++ b/themes/fortify-hugo/layouts/documentation/single.html
@@ -3,41 +3,31 @@
   <div class="container">
     <div class="row">
       <!-- Sidebar Navigation -->
-      <aside class="lg:col-3 mb-8 lg:mb-0">
-        <div class="docs-sidebar sticky top-20 max-h-[calc(100vh-6rem)] overflow-y-auto">
-          <nav class="docs-nav">
-            {{ partial "documentation/sidebar-menu.html" . }}
-          </nav>
-        </div>
-      </aside>
+      <div class="lg:col-3 pl-0">
+        {{ partial "documentation/sidebar-menu.html" . }}
+      </div>
 
       <!-- Main Content Area -->
-      <main class="lg:col-6">
-        <article>
+      <main class="lg:col-9">
+        <article class="content">
           <!-- Page Header -->
           <header class="mb-8">
-            <h1 class="mb-4">{{ .Title }}</h1>
-            {{ with .Description }}
-            <p class="text-lg text-text">{{ . }}</p>
+            <h1 class="text-4xl mt-2 mb-2">{{ .Title }}</h1>
+            {{ $desc := or .Description .Params.subtitle }}
+            {{ with $desc }}
+            <p class="text-xl font-light text-text/70 mb-4">{{ . }}</p>
             {{ end }}
           </header>
 
           <!-- Main Content -->
-          <div class="content docs-content">
+          <div class="docs-content">
             {{ .Content }}
           </div>
-
-          <!-- Page Footer -->
-          <footer class="mt-12 border-t border-border pt-6">
-            {{ with .Lastmod }}
-            <p class="text-sm text-text">Last updated: {{ .Format "January 2, 2006" }}</p>
-            {{ end }}
-          </footer>
         </article>
       </main>
 
-      <!-- Table of Contents (aside) -->
-      {{ if gt (len .TableOfContents) 50 }}
+      {{/* Table of Contents - currently hidden */}}
+      {{/* {{ if gt (len .TableOfContents) 50 }}
       <aside class="lg:col-3 hidden lg:block">
         <div class="docs-toc sticky top-20 max-h-[calc(100vh-6rem)] overflow-y-auto">
           <div class="rounded-lg border-l-4 border-primary bg-light p-4">
@@ -48,7 +38,7 @@
           </div>
         </div>
       </aside>
-      {{ end }}
+      {{ end }} */}}
     </div>
   </div>
 </section>
