--- a/themes/fortify-hugo/layouts/documentation/list.html
+++ b/themes/fortify-hugo/layouts/documentation/list.html
@@ -3,7 +3,7 @@
   <div class="container">
     <div class="row">
       <!-- Sidebar Navigation -->
-      <div class="lg:col-3 pl-0">
+      <div class="lg:col-3 lg:pl-0">
         {{ partial "documentation/sidebar-menu.html" . }}
       </div>
 
