--- a/themes/fortify-hugo/layouts/partials/documentation/sidebar-menu.html
+++ b/themes/fortify-hugo/layouts/partials/documentation/sidebar-menu.html
@@ -3,7 +3,7 @@
 {{ $currentPage := . }}
 
 <aside class="lg:sticky lg:top-1">
-  <nav class="docs-nav lg:max-h-[80vh] lg:overflow-y-auto lg:overscroll-contain">
+  <nav class="docs-nav lg:max-h-[calc(100vh-153px)] lg:overflow-y-auto lg:overscroll-contain  ">
     <div class="px-4 py-2">
       {{/* Get top-level menu items (items without a parent) */}}
       {{ range site.Menus.sidebar }}
@@ -24,7 +24,7 @@
             {{ end }}
           {{ end }}
 
-          <div class="nav-section {{ if $sectionActive }} active{{ end }}" data-section>
+          <div class="nav-section{{ if $sectionActive }} active{{ end }}" data-section>
             <div class="section-header group mb-1 flex items-center justify-between rounded transition-colors px-2 py-1.5 {{ if $isActive }} bg-primary{{ else }} hover:bg-body{{ end }}">
               <a href="{{ .URL | relLangURL }}" class="section-link flex-1 text-sm font-medium transition-colors{{ if $isActive }} text-white{{ else }} text-text-dark group-hover:text-primary{{ end }}">
                 {{ .Name }}
