--- a/themes/fortify-hugo/layouts/partials/essentials/style.html
+++ b/themes/fortify-hugo/layouts/partials/essentials/style.html
@@ -80,3 +80,5 @@
   integrity="{{ $stylesLazy.Data.Integrity }}"
   media="print"
   onload="this.media='all'; this.onload=null;" />
+
+<link rel="stylesheet" href="{{ "pagefind/pagefind-ui.css" | relURL }}">
