--- a/themes/fortify-hugo/layouts/documentation/single.html
+++ b/themes/fortify-hugo/layouts/documentation/single.html
@@ -8,7 +8,7 @@
       </div>
 
       <!-- Main Content Area -->
-      <main class="lg:col-9">
+      <main class="lg:col-9" data-pagefind-body>
         <article class="content">
           <!-- Page Header -->
           <header class="mb-8">
