--- a/themes/fortify-hugo/layouts/guides/single.html
+++ b/themes/fortify-hugo/layouts/guides/single.html
@@ -1,6 +1,7 @@
 {{ define "main" }}
-  {{ partial "page-header" . }}
-
+  <div data-pagefind-body>
+    {{ partial "page-header" . }}
+  </div>
 
   <section class="section">
     <div class="container">
@@ -17,7 +18,7 @@
               </ul>
             </div>
           </div>
-          <div class="content">
+          <div class="content" data-pagefind-body>
               {{ .Content }}
           </div>
         </div>
