--- a/themes/fortify-hugo/layouts/partials/page-header.html
+++ b/themes/fortify-hugo/layouts/partials/page-header.html
@@ -2,7 +2,7 @@
   <div class="container text-center" data-aos="fade-up-sm">
     <div class="rounded-2xl px-8 pt-20">
       <h1 class="h2 md:h1 mb-4">{{ .Title | markdownify }}</h1>
-      <p class="text-2xl font-medium text-tertiary">
+      <p class="text-2xl font-medium text-tertiary"  data-pagefind-ignore>
         {{ .Params.updated | markdownify }}
       </p>
     </div>
