--- a/themes/fortify-hugo/layouts/documentation/single.html
+++ b/themes/fortify-hugo/layouts/documentation/single.html
@@ -9,7 +9,15 @@
 
       <!-- Main Content Area -->
       <main class="lg:col-9" data-pagefind-body>
+        {{ partial "pagefind-filters.html" . }}
         <article class="content">
+          {{ if eq .Params.version "pro"}}
+          <div data-pagefind-filter="tag:JobRunr Pro" class="label professional"><span>JobRunr Pro</span></div>
+          {{ else if eq .Params.version "enterprise"}}
+          <div data-pagefind-filter="tag:JobRunr Pro" class="label enterprise"><span>JobRunr Pro Enterprise</span></div>
+          {{ else }}
+          <template data-pagefind-filter="tag:JobRunr"></template>
+          {{ end }}
           <!-- Page Header -->
           <header class="mb-8">
             <h1 class="text-4xl mt-2 mb-2">{{ .Title }}</h1>
