--- a/themes/fortify-hugo/layouts/guides/single.html
+++ b/themes/fortify-hugo/layouts/guides/single.html
@@ -7,6 +7,7 @@
     <div class="container">
       <div class="row justify-center">
         <div class="lg:col-10">
+          {{ if and (eq .Section "guides") (not (eq $.Params.hideFrameworkSelector true)) }}
           <div class="framework-container mb-6">
             <div class="flex items-center justify-end gap-3 rounded-lg bg-light/50 border border-border/30 px-4 py-3">
               <span class="text-sm font-medium text-text-dark">Choose a framework:</span>
@@ -18,7 +19,9 @@
               </ul>
             </div>
           </div>
+          {{ end }}
           <div class="content" data-pagefind-body>
+              {{ partial "pagefind-filters.html" . }}
               {{ .Content }}
           </div>
         </div>
